BUG NEEDS TO BE FIXED as it's not showing up error message

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -158,7 +158,7 @@ footer {
   .new-tweet {
     position: absolute;
     width: 50%;
-    top: 21.5%;
+    top: 22.5%;
     left: 70%;
     transform: translate(-50%, -50%)
   }
